# PWHomeWork10_second_option

./: README.md  pyproject.toml
pwhw10/pwhw10/: settings.py
pwhw10/users/: views.py
pwhw10/users/templates/users/: login.html  signup.html
